# pytest-xflaky

./: .releaserc.json  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: main.yml  release.yml
docs/: conf.py  index.rst
src/pytest_xflaky/: add_decorator.py  github_blame.py  plugin.py
tests/: conftest.py  test_add_decorator.py  test_xflaky.py
